Opened 12 years ago
Closed 10 years ago
#9593 closed bug (fixed)
Bookmarks do not support long names.
Reported by: | Premislaus | Owned by: | leavengood |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Applications/WebPositive | Version: | R1/Development |
Keywords: | bookmarks long names | Cc: | |
Blocked By: | Blocking: | ||
Platform: | All |
Description
This bug is easy to reproduce on the TuneTracker website.
Attachments (1)
Change History (3)
by , 12 years ago
Attachment: | bookmark_fail.png added |
---|
comment:1 by , 12 years ago
Note:
See TracTickets
for help on using tickets.
http://www.tunetrackersystems.com/